--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-        <title>firefield</title>		
+        <title>FIREFIELD — in development</title>		
 		<style>
 			@font-face {
 				font-family: ded;
